3/08/21 DH/BN/CB: Added reserve for line 0 for text messages, added monster display
3/06/21 DH/BN: Added EPIC player win screen, added player_movement.c which contains both methods to move player, stopped monsters from moving onto stairs, added update_monster_list
3/05/2021 BN: Added spawn_new_dungeon method to make a new dungeon without having to call a million methods. also implemented ncurses version print_dungeon, made the player movement fully functional, added stairs functionality (does not remember previous dungeons), added quit button
3/03/2021 DH/BN: Added corridor creation when monster moves through rock, added monster deaths, added player lose case, refactored variable names, bug fixed, and added EPIC ending screen, added erratic and dumb characterisitic //1.04 assignment done
3/02/2021 DH/BN: modified entities to be based on 2d array, modified print statement, fixed heap initialization and next_turn, got telepathic monsters to move the way they are supposed to
3/01/2021 DH/BN/CB: Added randomness to monster generation and added generate_entities_heap, started on next_turn
2/28/2021 DH/BN: Added create_entities method and added monster generation
2/22/2021 DH/BN/CB: Added print distance maps function in dungeon.c, and bugtested //1.03 assignment done
2/21/2021 DH/BN: Implemented distance map in path_finding.c for both tunneling and non-tunneling monsters
2/21/2021 DH/BN: Added dungeon.h, added path_finding.c, heap.c, heap.h
2/17/2021 DH/BN/CB: Added endianess //1.02 assignment done
2/17/2021 BN: fixed saving and loading the arrays, and fixed loading rooms from a file
2/17/2021 DH/BN/CB: Worked on correcting load_dungeon
2/16/2021 DH: Completed save dungeon, working on tracing segfaults in read dungeon
2/15/2021 DH/BN/CB: Worked on getting save dungeon complete, still need to trace some seg faults
2/15/2021 DH: Added PC struct and fixed some bugs with save_dungeon, added up to num_rooms in load_dungeon