@@ -2,11 +2,12 @@
 
 // goes up or down the stairs
 void interact_stair(char up_or_down, int num_ent, int dungeon_layout[DUNGEON_ROW][DUNGEON_COL], int num_rooms, pc_t pc) {
+  int num_mon = num_ent - 1;
   if ((up_or_down == '<' || up_or_down == '>') 
       && (dungeon_layout[pc.y_pos][pc.x_pos] == TILE_UP
         || dungeon_layout[pc.y_pos][pc.x_pos] == TILE_DOWN))
   {
-    spawn_new_dungeon(num_rooms, num_ent - 1);
+    spawn_new_dungeon(num_rooms, &num_mon);
   }
   else
   {
